example/errors/interpret/index_out_of_bounds.box
set arr: [int] = [1, 3, 2];

println("arr[3] = " + arr[3] as str);
